# Ten-thousand-soul-banners

./: .gitignore  CONTRIBUTING.md  ISSUE-README-I18N.md  PEOPLE.md  README.en.md  README.es.md  README.ja.md  README.ko.md  README.md
categories/: renhuang-flag.md
role-skill-generator/: README.md  SUMMON.sh  pyproject.toml
role-skill-generator/docs/: open-source-deep-research-survey.md  persona-deep-research-method.md
role-skill-generator/examples/: ada-lovelace.bundle.json  ada-lovelace.target.json
role-skill-generator/examples/rendered/ada-lovelace/: README.md  SKILL.md
role-skill-generator/examples/rendered/ada-lovelace/references/research/: 01-writings.md  02-conversations.md  03-expression-dna.md  04-external-views.md  05-decisions.md  06-timeline.md
role-skill-generator/src/role_skill_generator/: __init__.py  __main__.py  cli.py  models.py  pipeline.py  providers.py  query_pack.py  render.py
role-skill-generator/tests/: test_generator.py
skills/all-personas/: README.md  SKILL.md
soulbanner_skills/huchenfeng/: README.md  SKILL.md
soulbanner_skills/huchenfeng/references/research/: 01-writings.md  02-conversations.md  03-expression-dna.md  04-external-views.md  05-decisions.md  06-timeline.md
soulbanner_skills/zhoulifeng/: README.md  SKILL.md
soulbanner_skills/zhoulifeng/references/research/: 01-writings.md  02-conversations.md  03-expression-dna.md  04-external-views.md  05-decisions.md  06-timeline.md
sovereign_skills/zhang-xuefeng/: README.md  SKILL.md
sovereign_skills/zhang-xuefeng/references/research/: 01-writings.md  02-conversations.md  (+4 more)
