[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "role-skill-generator"
version = "0.1.0"
description = "Persona deep research and skill renderer for SoulBanner."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
role-skill-generator = "role_skill_generator.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
